<resources>
    <string name="app_name">School Scheduler</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="class_name">Set Class Name</string>
    <string name="class_time">Set Class Time</string>
    <string name="class_instructor">Set Class Instructor</string>
    <string name="button_save">Save</string>
    <string name="exam_name">Set Exam Name</string>
    <string name="exam_date">Set Exam Date</string>
    <string name="exam_time">Set Exam Time</string>
    <string name="exam_location">Set Exam Location</string>
    <string name="assignment_name">Set Assignment Name</string>
    <string name="assignment_due_date">Set Assignment Due Date</string>
    <string name="assignment_class">Set Assignment Class</string>
    <string name="new_assignment">Create New Assignment</string>
    <string name="add_class">Add Class</string>
    <string name="add_exam">Add Exam</string>
    <string name="sort_by">Sort By:</string>
    <string name="classes">Classes</string>
    <string name="due_date">Due Date</string>
    <string name="to_do_1">To Do 1</string>
    <string name="to_do_2">To Do 2</string>
    <string name="to_do_3">To Do 3</string>
    <string name="new_task">New Task</string>

</resources>