<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navBarColor" >

    <TextView
        android:id="@+id/newClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_class"
        android:textColor="@color/slateShadow"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/classNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/classNameInput"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:ems="10"
        android:textSize="18sp"
        android:hint="@string/class_name"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/classTimeInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".80"/>

    <EditText
        android:id="@+id/classTimeInput"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:ems="10"
        android:textSize="18sp"
        android:hint="@string/class_time"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/classInstructorInput"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:ems="10"
        android:textSize="18sp"
        android:hint="@string/class_instructor"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classTimeInput"
        app:layout_constraintVertical_bias=".2"/>

    <Button
        android:id="@+id/class_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cloudWisp"
        android:textColor="@color/slateShadow"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classInstructorInput" />

</androidx.constraintlayout.widget.ConstraintLayout>