<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.assignmentsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textSize="18sp"
            android:padding="14dp"
            android:textColor="@color/slateShadow"
            android:background="@color/appBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/sortClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/appBackground"
            android:text="@string/classes"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textColor="@color/slateShadow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/sortBy"
            app:layout_constraintEnd_toStartOf="@id/sortDate"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/sortDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/appBackground"
            android:text="@string/due_date"
            android:textColor="@color/slateShadow"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/sortClass"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/assignments_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/add"
        app:backgroundTint="@color/cloudWisp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="50dp"
        android:id="@+id/assignments_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

</FrameLayout>

