<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".todoFragment">

<!--    <fragment-->
<!--        android:id="@+id/fragment_to_do"-->
<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:defaultNavHost="true"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:navGraph="@navigation/nav_graph" />-->
<!--    <fragment-->
<!--        android:id="@+id/nav_host_fragment_content_main"-->
<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:defaultNavHost="true"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:navGraph="@navigation/nav_graph" />-->

    <Button
        android:id="@+id/btn_todo_1"
        android:layout_width="283dp"
        android:layout_height="117dp"
        android:backgroundTint="#9AD6FA"
        android:text="@string/to_do_1"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/btn_todo_2"
        android:layout_width="283dp"
        android:layout_height="117dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#E9C6FF"
        android:text="@string/to_do_2"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_todo_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_todo_1" />

    <Button

        android:id="@+id/btn_todo_3"
        android:layout_width="283dp"
        android:layout_height="117dp"
        android:backgroundTint="#AFFA9A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/to_do_3"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_todo_1" />

<!--    <include layout="@layout/content_main" />-->
</androidx.constraintlayout.widget.ConstraintLayout>